recursion.cons.last.Last.scala.error
Compilation error:
Last:3: error: type mismatch;
 found   : scala.collection.immutable.Nil.type
 required: Int
  if (l==Nil){return Nil}
                     ^Last:4: error: not found: value length
  else if (length(l)==1){
           ^Last:5: error: type mismatch;
 found   : Int
 required: List[Int]
    return last(l.head)
                  ^